tests/snapshots/snapshots__budget_xxhash_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (483 words)

README.md
     1→# xxhash
     2→
     3→[![Go Reference](https://pkg.go.dev/badge/github.com/cespare/xxhash/v2.svg)](https://pkg.go.dev/github.com/cespare/xxhash/v2)
     4→[![Test](https://github.com/cespare/xxhash/actions/workflows/test.yml/badge.svg)](https://github.com/cespare/xxhash/actions/workflows/test.yml)
     5→
    33→## Compatibility
    34→
    35→This package is in a module and the latest code is in version 2 of the module.
    36→You need a version of Go with at least "minimal module compatibility" to use
    37→github.com/cespare/xxhash/v2:
    45→## Benchmarks
    46→
    47→Here are some quick benchmarks comparing the pure-Go and assembly
    48→implementations of Sum64.
    49→
    66→## Projects using this package
    67→
    68→- [InfluxDB](https://github.com/influxdata/influxdb)
    69→- [Prometheus](https://github.com/prometheus/prometheus)
    70→- [VictoriaMetrics](https://github.com/VictoriaMetrics/VictoriaMetrics)
dynamic/plugin.go
    14→const (
    15→	in   = "Call me Ishmael. Some years ago--never mind how long precisely-"
    16→	want = uint64(0x02a2e85470d6fd96)
    17→)
    19→func TestSum(t *testing.T) {
    20→	got := xxhash.Sum64String(in)
    21→	if got != want {
    26→func TestDigest(t *testing.T) {
    27→	for chunkSize := 1; chunkSize <= len(in); chunkSize++ {
    28→		name := fmt.Sprintf("[chunkSize=%d]", chunkSize)
xxhash.go
    11→const (
    12→	prime1 uint64 = 11400714785074694791
    13→	prime2 uint64 = 14029467366897019727
    14→	prime3 uint64 = 1609587929392839161
    15→	prime4 uint64 = 9650029242287828579
    16→	prime5 uint64 = 2870177450012600261
    19→// Store the primes in an array as well.
    20→//
    21→// The consts are used when possible in Go code to avoid MOVs but we need a
    22→// contiguous array for the assembly code.
    23→var primes = [...]uint64{prime1, prime2, prime3, prime4, prime5}
    25→// Digest implements hash.Hash64.
    26→//
    27→// Note that a zero-valued Digest is not ready to receive writes.
    28→// Call Reset or create a Digest using New before calling other methods.
    29→type Digest struct {
    30→	v1    uint64
    31→	v2    uint64
    32→	v3    uint64
    33→	v4    uint64
    34→	total uint64
    35→	mem   [32]byte
    36→	n     int // how much of mem is used
    37→}
    40→func New() *Digest {
    45→func NewWithSeed(seed uint64) *Digest {
    53→func (d *Digest) Reset() {
    59→func (d *Digest) ResetWithSeed(seed uint64) {
    69→func (d *Digest) Size() int { return 8 }
    72→func (d *Digest) BlockSize() int { return 32 }
    75→func (d *Digest) Write(b []byte) (n int, err error) {
   113→func (d *Digest) Sum(b []byte) []byte {
   129→func (d *Digest) Sum64() uint64 {
   170→const (
   171→	magic         = "xxh\x06"
   172→	marshaledSize = len(magic) + 8*5 + 32
   176→func (d *Digest) MarshalBinary() ([]byte, error) {
   190→func (d *Digest) UnmarshalBinary(b []byte) error {
   208→func appendUint64
   214→func consumeUint64
   219→func u64
   220→func u32
   222→func round
   229→func mergeRound
   236→func rol1
   237→func rol7
   238→func rol11
   239→func rol12
   240→func rol18
   241→func rol23
   242→func rol27
   243→func rol31
xxhash_asm.go
    12→func Sum64(b []byte) uint64
    14→//go:noescape
    15→func writeBlocks(d *Digest, b []byte) int
xxhash_other.go
     7→func Sum64(b []byte) uint64 {
    64→func writeBlocks
xxhash_safe.go
     9→func Sum64String(s string) uint64 {
    14→func (d *Digest) WriteString(s string) (n int, err error) {
xxhash_unsafe.go
    38→func Sum64String(s string) uint64 {
    45→func (d *Digest) WriteString(s string) (n int, err error) {
    53→// sliceHeader is similar to reflect.SliceHeader, but it assumes that the layout
    54→// of the first two words is the same as the layout of a string.
    55→type sliceHeader struct {
    56→	s   string
    57→	cap int
    58→}
xxhsum/xxhsum.go
    11→func main() {
    34→func contains(ss []string, s string) bool {
    43→func printHash(r io.Reader, name string) {
