tests/snapshots/snapshots__budget_xxhash_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (8 words)

README.md
dynamic/plugin.go
xxhash.go
xxhash_asm.go
xxhash_other.go
xxhash_safe.go
xxhash_unsafe.go
xxhsum/xxhsum.go
