tests/snapshots/snapshots__budget_xxhash_xxhsum_subdir1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 10 → level 3 (7 words)

xxhsum.go
    11→func main
    34→func contains
    43→func printHash
