tests/snapshots/snapshots__budget_xxhash_xxhsum_subdir2.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 20 → level 7 (17 words)

xxhsum.go
    11→func main() {
    34→func contains(ss []string, s string) bool {
    43→func printHash(r io.Reader, name string) {
